# trivy-mdsbom

./: README.md  pyproject.toml
.github/workflows/: dynamic_sbom_sca_trivy.yml
trivy_mdsbom/: __init__.py
